Change validate package to dto
