# dto/auth.go
@@ -1,0 +1,6 @@
+package dto
+
+type LoginReq struct {
+	Username string `json:"username" validate:"required"`
+	Password string `json:"password" validate:"required"`
+}
