# routers/auth.go
@@ -1,12 +1,12 @@
 package routers
 
 import (
+	"github.com/fingerprint/dto"
 	"github.com/fingerprint/handlers"
-	"github.com/fingerprint/validates"
 	"github.com/gofiber/fiber/v2"
 )
 
-func SetUpAuthRouter(router fiber.Router, v validates.Validator, handler handlers.AuthHandler) {
-	vLoginReq := validates.ValidateRequest[validates.LoginReq](v)
+func SetUpAuthRouter(router fiber.Router, v dto.Validator, handler handlers.AuthHandler) {
+	vLoginReq := dto.ValidateRequest[dto.LoginReq](v)
 	router.Post("/login", vLoginReq, handler.Login)
 }
